# lintf2_ether_ana_postproc

./: .flake8  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  tests-skip.yml  tests.yml
scripts/bulk_and_walls/gmx/density-z/: generate_and_plot_z-bins.sh  generate_z-bins_bulk.py  get_free-energy_extrema.sh  plot_density-z_conc_dependence.py  plot_free-energy_barriers_chain-length_dependence_cluster.py  plot_free-energy_barriers_conc_dependence_cluster.py  plot_free-energy_barriers_surfq_dependence_cluster.py  plot_free-energy_extrema_surfq_dependence_order.py  plot_free-energy_trans_rate_chain-length_dependence_cluster.py  plot_free-energy_trans_rate_conc_dependence_cluster.py  plot_free-energy_trans_rate_surfq_dependence_cluster.py  plot_free_energy_conc_dependence.py  plot_potential_surfq_dependence.py
scripts/bulk_and_walls/gmx/energy/: get_mean_energy_chain-length_dependence.py  get_mean_energy_conc_dependence.py  plot_density_chain-length_dependence.py  plot_density_conc_dependence.py  plot_ekin_per_chain_chain-length_dependence.py  plot_ekin_per_chain_conc_dependence.py  plot_energy_per_chain_chain-length_dependence.py  plot_energy_per_chain_conc_dependence.py  plot_epot_per_chain_chain-length_dependence.py  plot_epot_per_chain_conc_dependence.py  plot_volume_per_chain_chain-length_dependence.py  plot_volume_per_chain_conc_dependence.py  plot_volume_per_salt_conc_dependence.py
scripts/bulk_and_walls/gmx/polystat/: plot_persistence_length_chain-length_dependence.py  plot_persistence_length_conc_dependence_all.py  plot_polystat_chain-length_dependence.py  plot_polystat_conc_dependence.py  plot_polystat_conc_dependence_all.py
scripts/bulk_and_walls/gmx/rdf/: plot_rdf_chain-length_dependence.py  plot_rdf_conc_dependence.py
scripts/bulk_and_walls/mdt/axial_hex_dist/: plot_axial_hex_dist_density_chain-length_dependence.py  plot_axial_hex_dist_density_conc_dependence.py  plot_axial_hex_dist_free-energy_barriers_chain-length_dependence.py  plot_axial_hex_dist_free-energy_barriers_conc_dependence.py  plot_axial_hex_dist_free_energy_chain-length_dependence.py  plot_axial_hex_dist_free_energy_conc_dependence.py
scripts/bulk_and_walls/mdt/contact_hist/: plot_contact_hist_chain-length_dependence.py  plot_contact_hist_conc_dependence.py
scripts/bulk_and_walls/mdt/contact_hist_block_average/: plot_contact_hist_block_av_chain-length_dependence.py  plot_contact_hist_block_av_conc_dependence.py
scripts/bulk_and_walls/mdt/contact_hist_slab-z/: plot_cn_slab-z_chain-length_dependence.py  plot_cn_slab-z_conc_dependence.py  plot_cn_slab-z_surfq_dependence.py
scripts/bulk_and_walls/mdt/densmap-z/: plot_densmap-z.py  plot_densmap-z.sh
scripts/bulk_and_walls/mdt/discrete-hex/: get_and_plot_hex_bin_lifetimes_chain-length_dependence.py  plot_hex_bin_lifetimes_conc_dependence.py  (+1 more)
scripts/gmx/density-z/: generate_and_plot_z-bins.sh  generate_z-bins.py  get_free-energy_extrema.py  get_free-energy_extrema.sh  plot_density-z_chain-length_dependence.py  plot_density-z_conc_dependence.py  plot_density-z_nemd.py  plot_density-z_surfq_dependence.py  plot_ekin_dist.py  plot_free-energy_extrema_chain-length_dependence_cluster.py  plot_free-energy_extrema_chain-length_dependence_order.py  plot_free-energy_extrema_conc_dependence_cluster.py  plot_free-energy_extrema_conc_dependence_order.py  plot_free-energy_extrema_surfq_dependence_cluster.py  plot_free-energy_extrema_surfq_dependence_order.py  plot_free_energy_chain-length_dependence.py  plot_free_energy_conc_dependence.py  plot_free_energy_nemd.py  plot_free_energy_surfq_dependence.py  plot_potential_chain-length_dependence.py  plot_potential_conc_dependence.py  plot_potential_nemd.py  plot_z-bins.py
src/lintf2_ether_ana_postproc/: __init__.py  clstr.py  io_handler.py  lifetimes.py  misc.py  plot.py  simulation.py  transfer.py
(+66 files in other folders)
